--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Muhammad Hasham Waseem Abbasi</h1>
+            <div><a href="mailto:Muhammad.Hasham@studentambassadors.com">Muhammad.Hasham@studentambassadors.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/mhwa06<handle>">@github_handle</a></li>
+                    <li><a href="https://linkedin.com/in/mhwa06<handle>">@linkedin_handle</a></li>
+                    <li><a href="https://twitter.com/mhwa06<handle>">@twitter_handle</a></li>
                 </ul>    
             </section>
             
@@ -31,11 +31,11 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Air University PAF Complex E-9 Islamabad, Pakistan
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
+                        <li>GPA: 2.84</li>
                         <li>Years</li>
                     </ul>
                 </div>
