--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
                     <li><a href="https://github.com/mhwa06<handle>">@github_handle</a></li>
                     <li><a href="https://linkedin.com/in/mhwa06<handle>">@linkedin_handle</a></li>
                     <li><a href="https://twitter.com/mhwa06<handle>">@twitter_handle</a></li>
+                    <li><a href="https://facebook.com/mhwa06<handle>">@facebook_handle</a></li>
                 </ul>    
             </section>
             
