--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 2.84</li>
-                        <li>Years</li>
+                        <li>GPA : 2.84</li>
+                        <li>Years : 2</li>
                     </ul>
                 </div>
             </section>
