--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,13 @@
                 </h2>
                 <ul>
                     <li>CSS</li>
-                    <li>HTML</li>
+                    <li>HTML/XML/Turtle</li>
                     <li>JavaScript</li>
                     <li>Git</li>
                     <li>Visual Studio Code</li>
+                    <li>C++</li>
+                    <li>Python</li>
+                    <li>Assembly Language</li>
                 </ul>
             </section>
         </article>
